--- a/assets/www/master.css
+++ b/assets/www/master.css
@@ -1,4 +1,24 @@
-  body {
+/*
+       Licensed to the Apache Software Foundation (ASF) under one
+       or more contributor license agreements.  See the NOTICE file
+       distributed with this work for additional information
+       regarding copyright ownership.  The ASF licenses this file
+       to you under the Apache License, Version 2.0 (the
+       "License"); you may not use this file except in compliance
+       with the License.  You may obtain a copy of the License at
+
+         http://www.apache.org/licenses/LICENSE-2.0
+
+       Unless required by applicable law or agreed to in writing,
+       software distributed under the License is distributed on an
+       "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+       KIND, either express or implied.  See the License for the
+       specific language governing permissions and limitations
+       under the License.
+*/
+
+
+ body {
     background:#222 none repeat scroll 0 0;
     color:#666;
     font-family:Helvetica;
@@ -74,7 +94,7 @@
   }
 
   /* Stage Buttons */
-  #stage.theme .btn{
+  #stage.theme a.btn{
   	border: 1px solid #555;
   	-webkit-border-radius: 5px;
   	border-radius: 5px;
@@ -89,24 +109,8 @@
   	padding:1.2em 0;
   	margin:3px 0px 3px 5px;
   }
-  
-  #stage.theme .large{
+  #stage.theme a.btn.large{
   	width:308px;
   	padding:1.2em 0;
   }
-  
-  #stage.theme .backBtn{
-   border: 1px solid #555;
-   -webkit-border-radius: 5px;
-   border-radius: 5px;
-   text-align:center;
-   display:block;
-   float:right;
-   background:#666;
-   width:75px;
-   color:#9ab;
-   font-size:1.1em;
-   text-decoration:none;
-   padding:1.2em 0;
-   margin:3px 5px 3px 5px;
-  }
+
